# Skin-Tone-Measurement

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
config/: monk_mapping.yaml  pipeline.yaml
face_detection/: base_detector.py  detector.py  factory.py  mediapipe_detector.py  mtcnn_detector.py
face_parsing/: bisenet_parser.py  setup.py
region_extraction/: extractor.py
services/: analysis_service.py  model_manager.py
skin_analysis/: color_analyzer.py
visualization/: visualizer.py
